# active_window

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
active_window/: __main__.py  parse.py
